fix overlay project cell on mobile + change animation on project

--- a/src/components/ProjectCell.css
+++ b/src/components/ProjectCell.css
@@ -109,13 +109,13 @@
   margin-top: calc(0.125em / 2 * -1);
   position: absolute;
   right: 0;
-  top: 50%;
+  top: 35%;
 }
 
 @media (max-width: 1024px) {
   .project-cell-details {
     opacity: 1.0;
-    height: 100%;
+    height: 101%;
     top: -306px;
     background: rgba(0, 0, 0, 0.47);
     backdrop-filter: blur(4px);
